--- a/search.html
+++ b/search.html
@@ -100,7 +100,7 @@
 <div style="text-align:center;">LosePrivacy API</div>
 <br />
 <div style="text-align:center;">
-<a href="https://link.urls.icu/loseprivacy"><i class="fa fa-home">LosePrivacy隐私查询器官网</i></a> | 
+<a href="https://loseprivacy.net"><i class="fa fa-home">LosePrivacy隐私查询器官网</i></a> | 
 <a href="https://twitter.com/loseprivacy"><i class="fa fa-twitter">LosePrivacy Twitter</i></a></div>
 
         </div>
