--- a/404.html
+++ b/404.html
@@ -1,1 +1,1 @@
-<script>window.location.href="https://link.urls.icu/loseprivacy"</script>
+<script>window.location.href="https://loseprivacy.net"</script>
