--- a/cli/index.html
+++ b/cli/index.html
@@ -195,7 +195,7 @@ apikey可以到LosePrivacy的开发者中心中获取。</p>
 <div style="text-align:center;">LosePrivacy API</div>
 <br />
 <div style="text-align:center;">
-<a href="https://link.urls.icu/loseprivacy"><i class="fa fa-home">LosePrivacy隐私查询器官网</i></a> | 
+<a href="https://loseprivacy.net"><i class="fa fa-home">LosePrivacy隐私查询器官网</i></a> | 
 <a href="https://twitter.com/loseprivacy"><i class="fa fa-twitter">LosePrivacy Twitter</i></a></div>
 
         </div>
