--- a/about/index.html
+++ b/about/index.html
@@ -103,7 +103,7 @@
 <h2 id="_1">隐私保护，一场公众不可能赢的战斗</h2>
 <p>公众保护个人隐私的战斗已经基本宣告失败。即使拥有话语权的精英们一直宣称隐私保护非常重要，但在强大的资本、政府面前，个人隐私不值一提。既然无法赢得隐私保护的战斗，那么公众应有权知道哪些隐私数据被泄露了、被谁泄露了，让公众可以自己选择方案保护自己。</p>
 <h2 id="loseprivacy_1">LosePrivacy官网</h2>
-<p><a href="https://link.urls.icu/loseprivacy">LosePrivacy</a></p>
+<p><a href="https://loseprivacy.net">LosePrivacy</a></p>
               
             </div>
           </div>
